<resources>
    <string name="app_name">JetpackNavigationComponentPlayground</string>

    <!-- region Common -->
    <string name="common__open_company_flow">Open company flow</string>
    <string name="common__open_vacancy_screen">Open vacancy screen</string>
    <!-- endregion -->

    <!-- region Bottom navigation -->
    <string name="main_bottom_navigation__search">Search</string>
    <string name="main_bottom_navigation__favorites">Favorites</string>
    <string name="main_bottom_navigation__responses">Responses</string>
    <string name="main_bottom_navigation__profile">Profile</string>
    <!-- endregion -->

    <!-- region Fragment <Splash> -->
    <string name="fragment_splash__title">Splash screen</string>
    <!-- endregion -->

    <!-- region Fragment <Search container> -->
    <string name="fragment_search_container__title">Search container</string>
    <string name="fragment_search_container__company_flow_result">Company flow result: %1$s</string>
    <!-- endregion -->

    <!-- region Fragment <Favorites container> -->
    <string name="fragment_favorites_container__title">Favorites container</string>
    <string name="fragment_favorites_container__open_first_dialog">Open first dialog</string>
    <!-- endregion -->

    <!-- region Fragment <Responses container> -->
    <string name="fragment_responses_container__title">Responses container</string>
    <!-- endregion -->

    <!-- region Fragment <Profile container> -->
    <string name="fragment_profile_container__title">Profile container</string>

    <!-- endregion -->

    <!-- region Nested navigation flow -->
    <string name="fragment_company__title">Company screen</string>
    <string name="fragment_company__move_to_details">Move to details</string>
    <string name="fragment_company_details__title">Company details</string>
    <string name="fragment_company_details__finish_flow">Finish flow</string>
    <!-- endregion -->

    <!-- region Auth flow -->
    <string name="fragment_start_auth__title">Start auth</string>
    <string name="fragment_start_auth__open_next_screen">Open next auth screen</string>
    <string name="fragment_finish_auth__title">Finish auth screen</string>
    <string name="fragment_finish_auth__finish_flow">Finish auth flow</string>
    <string name="fragment_profile_container__open_auth_flow">Open auth flow</string>
    <!-- endregion -->

    <!-- region Fragment <Vacancy> -->
    <string name="fragment_vacancy__title">Vacancy [id: %1$s]</string>
    <string name="fragment_vacancy__open_next_vacancy">Open next vacancy</string>

    <string name="fragment_vacancy_list__item__name">%1$s | id: %2$s</string>
    <!-- endregion -->

    <!-- region Dialogs -->
    <string name="dialog_a_bottom_sheet__counter">Counter: %1$d</string>
    <string name="dialog_a_bottom_sheet__title">Dialog (A)</string>
    <string name="dialog_a_bottom_sheet__increase_counter">Increase counter</string>
    <string name="dialog_a_bottom_sheet__go_to_next_screen">Go to next screen</string>
    <string name="dialog_b_bottom_sheet__title">Dialog (B)</string>
    <string name="dialog_b_bottom_sheet__close_current_dialog">Close current dialog</string>


    <!-- endregion -->

</resources>