<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_a_bottom_sheet__text__title"
        style="@style/LargeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:text="@string/dialog_a_bottom_sheet__title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/dialog_a_bottom_sheet__view__content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/dp20"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_a_bottom_sheet__text__title">

        <TextView
            android:id="@+id/dialog_a_bottom_sheet__text__counter"
            style="@style/LargeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/purple_200"
            tools:text="Counter: 1" />

    </FrameLayout>

    <Button
        android:id="@+id/dialog_a_bottom_sheet__button__increase_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:text="@string/dialog_a_bottom_sheet__increase_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_a_bottom_sheet__view__content" />

    <Button
        android:id="@+id/dialog_a_bottom_sheet__button__open_next_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:text="@string/dialog_a_bottom_sheet__go_to_next_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_a_bottom_sheet__button__increase_counter" />

</androidx.constraintlayout.widget.ConstraintLayout>